Vendredi soir ok

--- a/programme/vendredi_soir.html
+++ b/programme/vendredi_soir.html
@@ -101,24 +101,10 @@
 			<h1>Agile Tour Rennes - Vendredi 22 novembre - Soirée</h1>
 			<div class="col-12 alert alert-secondary ordi">
 				<div style="margin-top:0.8em;">
-					<span style="margin-left:50px;">Mettez en évidence : </span>
-					<button class="button KN" onclick="showType('KN');" style="opacity: 1;">Keynote</button>
-					<button class="button CF" onclick="showType('CF');" style="opacity: 1;">Conférence</button>
-					<button class="button AJ" onclick="showType('AJ');" style="opacity: 1;">Atelier / Jeu</button>
-					<button class="button RE" onclick="showType('RE');" style="opacity: 1;">Retour d'expérience</button>
-					<button class="button TR" onclick="showType('TR');" style="opacity: 1;">Table ronde</button>
+					<span style="margin-left:50px;">Légende :</span>
+					<button class="button CF" style="opacity: 1;">Conférence</button>
+					<button class="button AJ" style="opacity: 1;">Atelier / Jeu</button>
 				</div>
-			</div>
-			<!--div class="input-group mb-3 telephone d-md-none" data-filter-group="FiltresTelephone"-->
-			<div class="input-group telephone" data-filter-group="FiltresTelephone" style="display: none;">
-			  	<select class="custom-select filter-custom-select" id="inputGroupSelect01" style="height: 2.26rem;">
-					<option>----- Choisissez votre filtre</option>
-					<option value=".KN" class="KN" style="opacity: 1;">Keynote</option>
-					<option value=".CF" class="CF" style="opacity: 1;">Conférence</option>
-					<option value=".AJ" class="AJ" style="opacity: 1;">Atelier / Jeu</option>
-					<option value=".RE" class="RE" style="opacity: 1;">Retour d'expérience</option>
-					<option value=".TR" class="TR" style="opacity: 1;">Table ronde</option>
-			  	</select>
 			</div>
 		</div>
 	</div>
@@ -134,11 +120,11 @@
 					<div>
 						<div class="debut heure">18h15</div>
 						<div class="salle heure">S1</div>
-						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-ras-la-crepe-des-methodes-agiles-passons-aux-methodes-rigides">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
-									<h3>Transformation agile : arrêtons de suivre aveuglément des frameworks</h3>
-									<p>Denis MIGOT</p>
+									<h3>Ras la crêpe des méthodes agiles, passons aux méthodes rigides !!</h3>
+									<p>Mickael ANDRE</p>
 								</div>
 							</div>
 						</a>
@@ -149,29 +135,27 @@
 					<div>
 						<div class="debut heure">18h15</div>
 						<div class="salle heure">S2</div>
-						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-agilo-park-un-serious-game-pour-apprendre-a-prioriser">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-les-enfants-terribles-de-lagilite-latelier-ludo-parodico-pedagogique">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
-									<h3>Agil'o Park, un serious game pour apprendre à prioriser</h3>
-									<p>Aurélie ROBERT &amp; Antony GUILLOTEAU</p>
+									<h3>Les enfants terribles de l'agilité, l'atelier ludo parodico pédagogique !</h3>
+									<p>Emmanuel GUE & Alexandre HUETE</p>
 								</div>
 							</div>
 						</a>
 						<div class="fin heure">19h00</div>
 					</div>
 				</div>
-				<div class="grid-item grid-item--width2 grid-item--height3 c3 CF" style="position: absolute; left: 33.2%; top: 442px; opacity: 1; width: 16.4%;">
+				<div class="grid-item grid-item--width2 grid-item--height3 c3 AJ" style="position: absolute; left: 33.2%; top: 442px; opacity: 1; width: 16.4%;">
 					<div>
 						<div class="debut heure">18h15</div>
 						<div class="salle heure">S3</div>
-						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-software-craftsmanship-il-est-temps-d-elever-le-niveau">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
-									<h3>Software Craftmanship : il est temps d'élever le niveau</h3>
-									<p>Nassim MASMOUDI</p>
+									<h3>Cook my Retro ! Day 1 #ATR19</h3>
+									<p>Jean-Baptiste LE GOFF & Kavishan GANESHAMOORTHY & Aurélien WILLE</p>
 								</div>
 							</div>
-						</a>
 						<div class="fin heure">19h00</div>
 					</div>
 				</div>
@@ -246,13 +230,13 @@
 		</button>
 	</div>
 
-	<div class="modal fade" id="modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks" tabindex="-1" role="dialog" aria-labelledby="#modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks-label"
+	<div class="modal fade" id="modal-ras-la-crepe-des-methodes-agiles-passons-aux-methodes-rigides" tabindex="-1" role="dialog" aria-labelledby="#modal-ras-la-crepe-des-methodes-agiles-passons-aux-methodes-rigides-label"
 		 aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Transformation agile : arrêtons de suivre aveuglément des frameworks</h2>
+						<h2>Ras la crêpe des méthodes agiles, passons aux méthodes rigides !!</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
@@ -262,46 +246,38 @@
 					</div>
 					<hr/>
 					<p style="text-align: justify">
-					70% des changements organisationnels échouent.
-					</p>
-					<br/>
-					<p style="text-align: justify">
-					Vous avez sûrement entendu ce chiffre à de nombreuses reprises pourtant… Cette statistique, répétée à l’unisson par de nombreux conférenciers, est un mythe. Un mythe tenace qui a un effet dévastateur : il rend, dans l’imaginaire collectif, le changement au sein d’une organisation difficile voire impossible, il impose inconsciemment le suivi scrupuleux d’un framework (SAFe, LeSS, Nexus…) pour éviter tout échec. Seulement, imiter aveuglément un framework est un piège.
-					</p>
-					<br/>
-					<p style="text-align: justify">
-					Bien lancer et réussir la transformation de son entreprise ne dépend pas d'un cadre ou d'une méthode. C'est un effort, long certes, mais à la portée de tous à condition de se poser les bonnes questions.
-					</p>
-					<br/>
-					<p style="text-align: justify">
-						Objectif :
-					</p>
-					<br/>
-					<p style="text-align: justify">
-						Démystifier le changement organisationnel et présenter les bonnes questions à se poser au bon moment pour réussir une transformation.
+						L'agilité, on est tous d'accord, ça ne marche pas, alors passons aux méthodes rigides !
+						<br/><br/>
+						Dans ce retour d’expérience, nous verrons les bénéfices des « méthodes rigides » avec notamment :
+						<br/>
+						- Le « manifeste rigide »
+						<br/>
+						- Le cadre « SCRAFe » (c)
+						<br/>
+						- Pleins de belles pratiques : des silos, de beaux effets tunnels, du pilotage pressurisé par la vélocité, des rétrospectives pour régler ses comptes et chercher les coupables, etc.
+						<br/>
+						- Des dizaines de nouvelles certifications (très très chères et qui servent pas à grand-chose, sauf à frimer)
+						<br/>
+						- Et bien évidemment un retour d’expérience de mise en place des « méthodes rigides » dans une équipe qui n’avait rien demandé
+						<br/><br/>
+						Vous l’avez compris, que du bon sens ...
 					</p>
 					<hr/>
-
 					<div>
-						<img src="orateurs/denis-migot.jpg" style="height:8rem"/>
-						Denis Migot - <a href="https://twitter.com/DenisMigot">@DenisMigot</a>
+						Mickael André
 					</div>
-					<br/>
-					<p style="text-align: justify">
-					Je suis coach organisationnel et formateur avec 15 années d’expérience aussi bien en France qu'au Canada. Je suis également l’auteur du Guide de la transformation organisationnelle à l’usage des managers et dirigeants ainsi que de nombreux articles publiés chez Forbes, Les Echos, l’Usine Digitale ou encore le Journal du Net
-					</p>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="modal fade" id="modal-agilo-park-un-serious-game-pour-apprendre-a-prioriser" tabindex="-1" role="dialog" aria-labelledby="#modal-agilo-park-un-serious-game-pour-apprendre-a-prioriser-label"
+	<div class="modal fade" id="modal-les-enfants-terribles-de-lagilite-latelier-ludo-parodico-pedagogique" tabindex="-1" role="dialog" aria-labelledby="#modal-les-enfants-terribles-de-lagilite-latelier-ludo-parodico-pedagogique-label"
 		 aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Agil'o Park, un serious game pour apprendre à prioriser</h2>
+						<h2>Les enfants terribles de l'agilité, l'atelier ludo parodico pédagogique !</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
@@ -310,71 +286,21 @@
 						<div style="margin-left:1rem">Atelier / Jeu</div>
 					</div>
 					<hr/>
-					<p style="text-align: justify">Découvrez le rôle de Product Owner en vous glissant dans la peau d’un gérant de parc attraction.&nbsp;</p>
-					<p style="text-align: justify">Prioriser astucieusement votre backlog pour maximiser votre score ... et construisez votre parc sprint après sprint.</p>
-					<p style="text-align: justify">Mais attention, comme dans la vraie vie, votre capacité n’est pas toujours celle estimée, les anomalies guettent et peut-être serez-vous amener à re-prioriser<br><br>
-						<p style="text-align: justify">Créé par nous mêmes et expérimenté à plusieurs reprises, Agil'o Park est un serious game basé sur un plateau et des cartes permettant de se sensibiliser à la facette de priorisation du métier de Product Owner.</p>
-					<p style="text-align: justify">Il n'y a pas de bonne ou mauvaise priorisation mais une définition d'une stratégie initiale et l'adaptation aux aléas ... l'agilité quoi !<br><br>
-					<hr/>
-
-					<div>
-						<img src="orateurs/antony-guilloteau.png" style="height:8rem"/>
-						Antony GUILLOTEAU - <a href="https://twitter.com/aguilloteau">@aguilloteau</a>
-					</div>
-					<br/>
 					<p style="text-align: justify">
-						Après avoir évolué pendant une dizaine d’années dans le développement IT en tant que développeur, architecte, lead dev, Antony a fait le grand saut dans l’agilité en 2012.
-Manager reconnu chez Voyages-SNCF, il a ensuite enrichi sa boîte à outils avec la facilitation et le Design Thinking.
-Son point fort ? Accompagner à la fois les Product Owner dans la construction de leur vision et l’élaboration de leur backlog, soutenir les équipes de réalisation dans leurs démarches d’amélioration continue et les orienter vers une démarche DevOps, conseiller les managers dans leur changement de posture.
-Facilitateur, coach, formateur, il explore tous les jours de nouvelles pratiques pour rendre les équipes plus agiles et performantes.
+						Nous sommes Tic et Tac, à moins que cela ne soit le contraire, nous sommes les enfants terribles de l'agilité, donnez-nous un concept on vous le hack !
+						<br/>
+						Vous aimez l'agilité, les années 80, les séries TV, les jeux TV, les tubes et pub de l'époque. Mixer le tout et cela vous donnera une idée de notre atelier façon jeu TV. Bref si pour vous, apprendre en s'amusant est un crédo alors vous êtes au bon endroit.
+						<br/><br/>
+						* Pour tout agiliste qui saura jongler entre les valeurs agiles, les années 80, les anti-patterns, les processus, les outils, la dérision et revenir aux basics.
+						<br/><br/>
+						* nécessaire : un esprit créatif, une envie de partage, un brin de folie. Quelques notions d'agilité, des heures passées devant la TV, avoir vécu dans les années 80/90 seraient un plus.
+						<br/><br/>
+						*  une expérience unique, du fun des rires, et avec un peu de chances, vous apprendrez même 2, 3 trucs au passage, les gagnants repartent avec un pot d'agigilité, la poudre magique pour agiliser vos projets.
 					</p>
 					<hr/>
 					<div>
-						<img src="orateurs/aurelie-robert.jpg" style="height:8rem"/>
-						Aurelie ROBERT
+						Emmanuel GUE & Alexandre HUETE
 					</div>
-					<br/>
-					<p style="text-align: justify">
-						Je mélange culture agile,  Management 3.0 et facilitation UX, pour dynamiser le quotidien des équipes et des organisations de tous domaines (informatique, RH...) dans la conception d'un produit ou la mise en place d'une organisation.
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="modal fade" id="modal-software-craftsmanship-il-est-temps-d-elever-le-niveau" tabindex="-1" role="dialog" aria-labelledby="#modal-software-craftsmanship-il-est-temps-d-elever-le-niveau-label"
-		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
-			<div class="modal-content">
-				<div class="modal-body">
-					<div style="display: flex; justify-content: space-between">
-						<h2>Software Craftsmanship : il est temps d’élever le niveau</h2>
-						<a href="#" data-dismiss="modal">X</a>
-					</div>
-					<hr/>
-					<div style="display:flex">
-						<div class="CF" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Conférence</div>
-					</div>
-					<hr/>
-					<p style="text-align: justify">Et si le manifeste agile avait oublié un aspect majeur de la pratique du développement, et si on avait oublié le plus important : la technique ! Développer un logiciel fonctionnel et bien conçu, voici l’objectif des Craftsmen. Nous allons voir ensemble, comment diffuser ces nouvelles valeurs au sein de vos équipes.</p>
-					<p style="text-align: justify">Rappeler l’importance d’un code maintenable et fiable.</p>
-					<p style="text-align: justify">Expliquer les principes majeurs du Software Craftsmanship.</p>
-					<p style="text-align: justify">Finir par une bonne punchline !</p>
-					<hr/>
-
-					<div>
-						<img src="orateurs/nassim.jpg" style="height:8rem"/>
-						Nassim Masmoudi - <a href="https://twitter.com/masmoudi_nassim">@masmoudi_nassim</a>
-					</div>
-					<br/>
-					<p style="text-align: justify">
-						Nassim Masmoudi,
-Fan de football et de basket, je travaille à Infotel depuis presque 5 ans.
-Tech Lead depuis un an et demi. C'est à ce moment que je découvre le Software Craftsmanship. 
-Je partage mon temps entre le développement sur des projets et la diffusion de mes connaissances.
-Mon but est d'accompagner tout le monde afin d’élever le niveau. 
-					</p>
 				</div>
 			</div>
 		</div>
