Quelques sessions du vendredi matin

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -219,7 +219,7 @@
 					<div>
 						<div class="debut heure">9h30</div>
 						<div class="salle heure">S5</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/fish-philosophy">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-fish-philosophy">
 							<div class="parent grid-item--height4">
 								<div class="enfant">
 									<h3>Fish Philosophy</h3>
@@ -308,7 +308,7 @@
 					<div>
 						<div class="debut heure">10h50</div>
 						<div class="salle heure">S4</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/devenez-une-famille-agile">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-devenez-une-famille-agile">
 							<div class="parent grid-item--height6">
 								<div class="enfant">
 									<h3>Devenez une famille Agile</h3>
@@ -816,6 +816,40 @@
 		</div>
 	</div>
 
+	<div class="modal fade" id="modal-fish-philosophy" tabindex="-1" role="dialog" aria-labelledby="#modal-fish-philosophy-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Fish Philosophy</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier/Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Connaissez vous un marché aux poissons sexy ? Je vous propose de partir à sa découverte. Nous découvrirons ensemble comment ils en sont arrivé là, mais vous ne serez pas seuls...un indien viendra vous prêter main forte. Bref, si vous êtes curieux, que vous souhaitez passer un bon moment cette conférence participative est pour vous.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/kervin-kueny.jpg" style="height:8rem"/>
+						Kervin Kueny - <a href="https://twitter.com/kervinkueny">@kervinkueny</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Curieux de nature, j'accompagne les équipes dans la tempête du changement. Ce n'est pas toujours facile,
+						et pourtant, cela réserve toujours des moments fantastiques.
+						<br/>Ma devise de grand philosophe : Le cerveau est un organe tellement formidable, que de nos jours, presque tout le monde utilise le sien (Chris Deniaud)
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="modal fade" id="modal-le-defi-collaboratif-lego-testez-votre-agilite-collective" tabindex="-1" role="dialog" aria-labelledby="#modal-le-defi-collaboratif-lego-testez-votre-agilite-collective-label"
 		 aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
@@ -882,6 +916,41 @@
 						Camille Richer, 27 ans, je suis professeur de sport diplômé de l'INSEP (PSHN) détaché auprès de la fédération française de Canoë Kayak en tant que Conseillé Technique Régional. En parallèle, je poursuis ma carrière d'entraineur/joueur de kayak polo au Club de Saint-Grégoire au plus haut niveau. J'accompagne également les athlètes de ma fédération dans leurs préparations physiques et mentales toutes disciplines confondues.
 					</p>
 					<hr/>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-devenez-une-famille-agile" tabindex="-1" role="dialog" aria-labelledby="#modal-devenez-une-famille-agile-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Devenez une Famille Agile</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier/Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Venez découvrir et expérimenter les trucs et astuces d'une famille agile et autonome. Co-construisons ensemble votre organisation familiale, réduisons la charge mentale, rendons autonome chaque membre de la famille et expérimentons une réunion familiale, apaisée et en toute bienveillance. Devenez une famille "libérée" et agile et ce, tout en jouant ;)
+					</p>
+					<br/>
+					<hr/>
+					<div>
+						<img src="orateurs/alexandrine-apolline.jpeg" style="height:8rem"/>
+						Alexandrine Barbieux (XX ans) & Apolline Loubradou (17 ans) - Mère & Fille
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Je suis Alexandrine, manager d’équipes "agiles" dans plusieurs pays pendant plus de 15 ans et depuis 4 ans consultante en transformation digitale et coach de vie, j'aide les organisations comme les personnes à trouver leur voie de façon auto-organisée et bienveillante, grâce notamment aux méthode agiles. Maman de deux adolescents non scolarisés pendant plus de 6 ans, j'ai su mettre en place et adapter une organisation « agile » au sein de la famille depuis quelques années. Et j'essaie d'apporter notre expérience à d'autres familles pour les aider à réduire la charge mentale et créer des conditions optimales pour une vie familiale créative, joyeuse et apaisée.
+						<br/><br/>
+						Je suis Apolline, 17 ans, bachelière à 15 ans en candidat libre et en apprentissage autonome depuis plus de 6 ans, je suis une touche à tout. Mon premier livre "Le Guide de la Cavalière Libérée" paru fin 2018 m'a permis de faire le tour des salons d'équitation et quelques conférences sur le sujet d'une nouvelle façon d'appréhender la relation cavalier-cheval et sur l'accomplissement de ses rêves. En parallèle, je co-anime des conférences sur le sujet du développement de l'autonomie en famille et l'auto-organisation dans les apprentissages ou la vie quotidienne. Nous partageons nos trucs et astuces d'une famille "agile" et auto-organisée avec tous ceux qui ont envie de tester un nouveau chemin avec leur tribu.
+					</p>
 				</div>
 			</div>
 		</div>
