Forum Ouvert/Agile Game Night

--- a/programme/vendredi_soir.html
+++ b/programme/vendredi_soir.html
@@ -178,7 +178,7 @@
 						<div class="debut heure">20h00</div>
 							<div class="parent grid-item--height3">
 								<div class="enfant">
-									<h3>Forum Ouvert</h3>
+									<h3>Forum Ouvert / Agile Game Night</h3>
 								</div>
 							</div>
 						<div class="fin heure">22h00</div>
